--- a/src/components/Main/Input/Input.css
+++ b/src/components/Main/Input/Input.css
@@ -1,80 +1,89 @@
 /* buttons -->Preview.css */
 
-.flex-center{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .flex-wrapper {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .flex-grow {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .panel-container {
-    display: flex;
-    justify-content: center;
-    width: 40%;
-    margin: 10px
+  display: flex;
+  justify-content: center;
+  width: 40%;
+  margin: 10px;
 }
 
 .main-bg-wrapper {
-    display: flex;
-    justify-content: center;
-    background: #add2c9;
-    width: 100%;
-    padding: 20px;
-    margin: 20px;
-    border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  background: #add2c9;
+  width: 100%;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 5px;
 }
 
 .secondary-bg-wrapper {
-    justify-content: space-between;
-    background: #faf9f9;
-    width: 100%;
+  justify-content: space-between;
+  background: #faf9f9;
+  width: 100%;
 }
 
 .input-panel-wrapper {
-    display: block;
+  display: block;
 }
 
 .input-panel {
-    width: 97%;
-    margin:10px;
-    background: #faf9f9;
+  width: 97%;
+  margin: 10px;
+  background: #faf9f9;
 }
 
 .title-big {
-    padding: 10px;
-    font-size: 1.1vw;
-    font-weight: bold;
+  padding: 10px;
+  font-size: 1.1vw;
+  font-weight: bold;
 }
 
 .title-mid {
-    background: #202020;
-    color: #fff;
-    padding: 10px;
-    font-size: 0.9vw;
-    font-weight: bold;
+  background: #202020;
+  color: #fff;
+  padding: 10px;
+  font-size: 0.9vw;
+  font-weight: bold;
 }
 
 .input-field-wrapper {
-    display: block;
-    padding: 10px;
-
+  display: block;
+  padding: 10px;
 }
 
 .single-line-input {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
-
 .label-text {
-    font-size: 0.9vw;;
-    padding: 5px;
+  font-size: 0.9vw;
+  padding: 5px;
+}
+.choose-symbols-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.previewSymbols {
+  height: 100%;
+}
+.chooseSymbol {
+  height: 5vw;
 }
