--- a/src/components/Main/LabelPreview/LabelPreview.css
+++ b/src/components/Main/LabelPreview/LabelPreview.css
@@ -4,103 +4,106 @@
 */
 
 .preview-panel {
-    height: 58%;
-    background: #909090;
-    margin: 10px;
-    display: flex;
-    justify-content:center;
-    align-items: center;
+  height: 58%;
+  background: #909090;
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .buttons-wrapper {
-    display: flex;
-    justify-content: flex-end;
-    margin: 5px;
+  display: flex;
+  justify-content: flex-end;
+  margin: 5px;
 }
 
 .button {
-    padding: 5px 10px 5px 10px;
-    margin: 10px;
-    border-radius: 4px;
+  padding: 5px 10px 5px 10px;
+  margin: 10px;
+  border-radius: 4px;
 }
 
-.label-wrapper{
-    background-color: #fff;
-    width: 90%;
-    height: 70%;
-    border-radius: 5px;
+.label-wrapper {
+  background-color: #fff;
+  width: 90%;
+  height: 70%;
+  border-radius: 5px;
 }
 
 .label {
-    display: flex;
-    height: 100%;
-
+  display: flex;
+  height: 100%;
 }
 
 .label-sheet {
-    width: 50%;  
+  width: 50%;
 }
 
 .label-text {
-    font-size: 0.5vw;
+  font-size: 0.5vw;
 }
 
 .symbols-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
 }
 
 .symbol {
-    height: 40%;
-    width: 40%;
-    margin: 5px;
+  height: 40%;
+  width: 40%;
+  margin: 5px;
+}
+
+.hiddenSymbol {
+  display: none;
 }
 
 .symbol img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .name-container {
-    display: flex;
-    justify-content: center;
-    padding: 10px;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
 }
 
 .title-blackBG {
-    background-color: #202020;
-    color: #ffffff;
-    font-size: 1.2vw;
-    width: 90%;
-    text-align: center;
-    padding: 5px;
+  background-color: #202020;
+  color: #ffffff;
+  font-size: 1.2vw;
+  width: 90%;
+  text-align: center;
+  padding: 5px;
 }
 
 .description-container {
-    border: 1px solid black;
-    width: 90%;
-    margin: 10px;
+  border: 1px solid black;
+  width: 90%;
+  margin: 10px;
 }
 
 .title-label {
-    font-size: 1.2vw;
-    font-weight: bold;
-    margin: 10px;
-    text-align: center;
+  font-size: 1.2vw;
+  font-weight: bold;
+  margin: 10px;
+  text-align: center;
 }
 
 .collection-wrapper {
-    width: 96%;
-    height: 17%;
-    margin: 10px;
-    background-color: #909090;
+  width: 96%;
+  height: 17%;
+  margin: 10px;
+  background-color: #909090;
 }
 
 .small-label {
-    width: 30%;
-    height: 60%;
-    background-color: #fff;
-    margin: 5px;
+  width: 30%;
+  height: 60%;
+  background-color: #fff;
+  margin: 5px;
 }
