--- a/src/components/Main/LabelPreview/LabelPreview.css
+++ b/src/components/Main/LabelPreview/LabelPreview.css
@@ -1,8 +1,3 @@
-/* 
-.main-bg-wrapper--> Input.css
-.secondary-bg-wrapper --> Input.css
-*/
-
 .preview-panel {
     height: 58%;
     background: #909090;
@@ -10,18 +5,6 @@
     display: flex;
     justify-content:center;
     align-items: center;
-}
-
-.buttons-wrapper {
-    display: flex;
-    justify-content: flex-end;
-    margin: 5px;
-}
-
-.button {
-    padding: 5px 10px 5px 10px;
-    margin: 10px;
-    border-radius: 4px;
 }
 
 .label-wrapper{
@@ -34,61 +17,16 @@
 .label {
     display: flex;
     height: 100%;
-
 }
 
 .label-sheet {
     width: 50%;  
 }
 
-.label-text {
-    font-size: 0.5vw;
-}
-
-.symbols-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px;
-}
-
-.symbol {
-    height: 40%;
-    width: 40%;
-    margin: 5px;
-}
-
-.symbol img {
-    width: 100%;
-    height: 100%;
-}
-
-.name-container {
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-}
-
-.title-blackBG {
-    background-color: #202020;
-    color: #ffffff;
-    font-size: 1.2vw;
-    width: 90%;
-    text-align: center;
-    padding: 5px;
-}
-
 .description-container {
     border: 1px solid black;
     width: 90%;
     margin: 10px;
-}
-
-.title-label {
-    font-size: 1.2vw;
-    font-weight: bold;
-    margin: 10px;
-    text-align: center;
 }
 
 .collection-wrapper {
@@ -103,4 +41,8 @@
     height: 60%;
     background-color: #fff;
     margin: 5px;
+}
+
+.buttons-wrapper a {
+    text-decoration: none;
 }
