--- a/src/shared-styles.css
+++ b/src/shared-styles.css
@@ -1,3 +1,8 @@
+.App {
+    margin: 0px;
+    font-family: 'Roboto', sans-serif;
+}
+
 .flex-center {
     display: flex;
     justify-content: center;
@@ -79,7 +84,7 @@
 #modal-wrap {
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0,0,0,0.6);
     position: fixed;
     z-index: 8000;
     top: 0;
@@ -105,7 +110,6 @@
     display: block;
 }
 
-/* #modal-wrap.visible + .modal-window {
+#modal-wrap.visible + .modal-window {
     top: 50%;
 }
-*/
