added the mini labels in the preview, when the label is saved

--- a/src/components/Main/LabelPreview/LabelPreview.css
+++ b/src/components/Main/LabelPreview/LabelPreview.css
@@ -9,8 +9,8 @@
 
 .label-wrapper {
   background-color: #fff;
-  width: 90%;
-  height: 70%;
+  width: 30vw;
+  height: 40vh;
   border-radius: 5px;
 }
 
