--- a/src/components/Main/PrintPreview/PrintPreview.css
+++ b/src/components/Main/PrintPreview/PrintPreview.css
@@ -11,7 +11,7 @@
 .modal-window {
 /*   display: none; */
     border: 1px solid #000;
-    padding: 50px;
+    padding: 30px;
     position: fixed;
     width: 50%;
     height: 80%;
@@ -34,4 +34,19 @@
 .pdf-view iframe{
     width: 100%;
     height: 75vh;
+}
+
+/*Label to Print */
+.collection-labels {
+    border: 1px solid black;
+    height: 75vh;
+    width: 25%;
+    margin: 0px 10px
+}
+
+.label-to-print {
+    border: 1px solid black;
+    height: 75vh;
+    width: 70%;
+    margin: 0px 10px
 }
