--- a/src/shared-styles.css
+++ b/src/shared-styles.css
@@ -1,82 +1,81 @@
 .App {
-    margin: 0px;
-    font-family: 'Roboto', sans-serif;
+  margin: 0px;
+  font-family: "Roboto", sans-serif;
 }
 
 .flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .padding {
-    padding: 10px;
+  padding: 10px;
 }
 
 .flex-wrapper {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .flex-grow {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .title-big {
-    padding: 10px;
-    font-size: 1.2vw;
-    font-weight: bold;
+  padding: 10px;
+  font-size: 1.2vw;
+  font-weight: bold;
 }
 
 .title-mid {
-    background: #202020;
-    color: #fff;
-    padding: 10px;
-    font-size: 1vw;
-    font-weight: bold;
+  background: #202020;
+  color: #fff;
+  padding: 10px;
+  font-size: 1vw;
+  font-weight: bold;
 }
 
 .title-label {
-    font-size: 1.2vw;
-    font-weight: bold;
-    margin: 10px;
-    text-align: center;
+  font-size: 1.2vw;
+  font-weight: bold;
+  margin: 10px;
+  text-align: center;
 }
 
-
 .label-text {
-    font-size: 0.9vw;;
-    padding: 5px;
+  font-size: 0.9vw;
+  padding: 5px;
 }
 
 .title-blackBG {
-    background-color: #202020;
-    color: #ffffff;
-    font-size: 1.2vw;
-    width: 90%;
-    text-align: center;
-    padding: 5px;
+  background-color: #202020;
+  color: #ffffff;
+  font-size: 1.2vw;
+  width: 90%;
+  text-align: center;
+  padding: 5px;
 }
 
 .buttons-wrapper {
-    display: flex;
-    justify-content: flex-end;
-    margin: 5px;
+  display: flex;
+  justify-content: flex-end;
+  margin: 5px;
 }
 
 .button {
-    padding: 5px 10px 5px 10px;
-    margin: 10px;
-    border-radius: 4px;
+  padding: 5px 10px 5px 10px;
+  margin: 10px;
+  border-radius: 4px;
 }
 
 .symbol {
-    height: 40%;
-    width: 40%;
-    margin: 5px;
+  height: 40%;
+  width: 40%;
+  margin: 5px;
 }
 
 .symbol img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
