--- a/src/components/Main/LabelPreview/Label/Label.css
+++ b/src/components/Main/LabelPreview/Label/Label.css
@@ -1,14 +1,36 @@
-.preview-panel {
-  height: 58%;
-  background: #909090;
-  margin: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.NFPA {
+  height: 8vw;
 }
-.label-wrapper {
-  background-color: #fff;
-  width: 90%;
-  height: 70%;
-  border-radius: 5px;
+
+.diamond-wrapper {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  width: fit-content;
+}
+
+.NFPA {
+  grid-area: 1 / 1 / 5 / 5;
+}
+.redIndex {
+  grid-area: 1 / 2 / 3 / 4;
+  justify-self: center;
+  align-self: center;
+}
+.blueIndex {
+  grid-area: 2 / 1 / 4 / 3;
+  justify-self: center;
+  align-self: center;
+}
+.whiteIndex {
+  grid-area: 3 / 2 / 5 / 4;
+  justify-self: center;
+  align-self: center;
+}
+.yellowIndex {
+  grid-area: 2 / 3 / 4 / 5;
+  justify-self: center;
+  align-self: center;
 }
