--- a/src/components/Main/Input/Input.css
+++ b/src/components/Main/Input/Input.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   width: 40%;
+  height: 85vh;
   margin: 10px;
 }
 
@@ -11,7 +12,6 @@
   background: #add2c9;
   width: 100%;
   padding: 20px;
-  margin: 20px;
   border-radius: 5px;
 }
 
