--- a/src/components/Main/PrintPreview/PrintPreview.css
+++ b/src/components/Main/PrintPreview/PrintPreview.css
@@ -1,52 +1,33 @@
-#modal-wrap {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.6);
-    position: fixed;
-    z-index: 8000;
-    top: 0;
-    display: none;
-}
-
-.modal-window {
-/*   display: none; */
-    border: 1px solid #000;
-    padding: 30px;
-    position: fixed;
-    width: 50%;
-    height: 80%;
-    left: 50%;
-    top: -50%;
-    transform: translate(-50%, -50%);
-    z-index: 9000;
-    background-color: #fff;
-    transition: all 0.4s ease-in-out;
-}
-
-#modal-wrap.visible {
-    display: block;
-}
-
-#modal-wrap.visible + .modal-window {
-    top: 50%;
-}
-
-.pdf-view iframe{
-    width: 100%;
-    height: 75vh;
-}
-
 /*Label to Print */
-.collection-labels {
+.labels-container {
     border: 1px solid black;
-    height: 75vh;
-    width: 25%;
-    margin: 0px 10px
+    height: 85vh;
+    width: 18rem;
+    margin: 10px;
 }
 
-.label-to-print {
+.print-grid-container {
     border: 1px solid black;
-    height: 75vh;
-    width: 70%;
-    margin: 0px 10px
+    height: 85vh;
+    width: 40rem;
+    margin: 10px;
+    display: grid;
+    place-items: center;
 }
+
+.grid2x4 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
+
+.div1 { grid-area: 1 / 1 / 2 / 2; }
+.div2 { grid-area: 1 / 2 / 2 / 3; }
+.div3 { grid-area: 2 / 1 / 3 / 2; }
+.div4 { grid-area: 2 / 2 / 3 / 3; }
+.div5 { grid-area: 3 / 1 / 4 / 2; }
+.div6 { grid-area: 3 / 2 / 4 / 3; }
+.div7 { grid-area: 4 / 1 / 5 / 2; }
+.div8 { grid-area: 4 / 2 / 5 / 3; }
