--- a/src/shared-styles.css
+++ b/src/shared-styles.css
@@ -83,3 +83,36 @@
 .text-center {
     text-align: center;
 }
+
+#modal-wrap {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.6);
+    position: fixed;
+    z-index: 8000;
+    top: 0;
+    display: none;
+}
+
+.modal-window {
+/*   display: none; */
+    border: 1px solid #000;
+    padding: 30px;
+    position: fixed;
+    width: 50%;
+    height: 90%;
+    left: 50%;
+    top: -50%;
+    transform: translate(-50%, -50%);
+    z-index: 9000;
+    background-color: #fff;
+    transition: all 0.4s ease-in-out;
+}
+
+#modal-wrap.visible {
+    display: block;
+}
+
+#modal-wrap.visible + .modal-window {
+    top: 50%;
+}
