--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,17 +1,16 @@
 .header-container {
     display: flex;
     justify-content: center;
+    background: #202020;
+    margin-bottom: 20px;
 }
 
 .logo-wrapper {
-    width:150px;
-    height:100px;
+    width:200px;
+    height:50px;
     display: flex;
     align-items: center;
+    justify-content: center;
+    background: #fff;
 }
 
-.logo-wrapper img{
-    width:150px;
-    height:150px;
-    display: flex;
-}
