--- a/src/components/Main/LabelPreview/LabelPreview.css
+++ b/src/components/Main/LabelPreview/LabelPreview.css
@@ -1,6 +1,6 @@
 .preview-panel {
   height: 50%;
-  background: #909090;
+  background: #A9A9A9;
   margin: 10px;
   display: flex;
   justify-content: center;
@@ -24,7 +24,7 @@
 }
 
 .description-container {
-  border: 1px solid black;
+  border: 1px solid #303030;
   width: 90%;
   margin: 10px;
 }
@@ -33,7 +33,7 @@
   width: 97%;
   height: 20%;
   margin: 10px;
-  background-color: #909090;
+  background-color: #A9A9A9;
 }
 
 .small-label {
@@ -61,4 +61,10 @@
 .save-button-wrapper {
   display: flex;
   justify-content: flex-end;
+}
+
+@media screen and (max-width: 1600px) and (max-height: 900px){
+  .preview-panel {
+    height: 45%;
+  }
 }
