--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -7,3 +7,10 @@
     justify-content: center;
     width: 100%;
 }
+
+@media only screen and (max-width: 500px) {
+    .main-page-view {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+}
