--- a/src/components/Main/PrintPreview/PrintPreview.css
+++ b/src/components/Main/PrintPreview/PrintPreview.css
@@ -1,13 +1,13 @@
 /*Label to Print */
 .labels-container {
-    border: 1px solid black;
+    border: 1px solid #303030;
     height: 85vh;
     width: 18rem;
     margin: 10px;
 }
 
 .print-grid-container {
-    border: 1px solid black;
+    border: 1px solid #303030;
     height: 85vh;
     width: 40rem;
     margin: 10px;
@@ -35,4 +35,14 @@
 iframe{
     width: 30%;
     height: 85vh;
+}
+
+.print-button {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+@media screen and (max-width: 1600px) and (max-height: 900px){
+ 
 }
