--- a/src/shared-styles.css
+++ b/src/shared-styles.css
@@ -22,6 +22,11 @@
   flex-grow: 1;
 }
 
+.flex-end {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .title-big {
   padding: 10px;
   font-size: 1.2vw;
@@ -84,10 +89,18 @@
     text-align: center;
 }
 
+.teal-bg {
+  background: #add2c9;
+}
+
+.box-shadow {
+  box-shadow: 0 1px 3px rgba(48,48,48,0.12), 0 1px 2px rgba(48,48,48,0.24);
+}
+
 #modal-wrap {
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(48,48,48,0.9);
     position: fixed;
     z-index: 8000;
     top: 0;
@@ -96,11 +109,11 @@
 
 .modal-window {
 /*   display: none; */
-    border: 1px solid #000;
-    padding: 30px;
+    border: 1px solid #202020;
+    padding: 20px;
     position: fixed;
     width: 80%;
-    height: 90%;
+    height: 85%;
     left: 50%;
     top: -50%;
     transform: translate(-50%, -50%);
@@ -115,4 +128,38 @@
 
 #modal-wrap.visible + .modal-window {
     top: 50%;
+}
+
+
+@media print { 
+  .modal-window {
+    border: none;
+    padding: 0;
+    height: 100%;
+    margin: 0;
+  }
+
+}
+
+@media screen and (max-width: 800px) {
+  .title-big {
+    font-size: 3vw;
+  }
+
+  .title-mid {
+    font-size: 2.5vw;
+  }
+
+  .title-label {
+    font-size: 2.5vw;
+  }
+
+  .label-text {
+    font-size: 2vw;
+  }
+
+  p {
+    font-size: 2.5vw;
+  }
+
 }
