--- a/src/components/Main/LabelPreview/MiniLabel/MiniLabel.css
+++ b/src/components/Main/LabelPreview/MiniLabel/MiniLabel.css
@@ -33,7 +33,7 @@
 .minilabelOverlay:hover {
   transition: 0.2s;
   opacity: 1;
-  background-color: rgba(73, 73, 73, 0.8);
+  background-color: rgba(36, 36, 36, 0.9);
 }
 
 .editMe {
@@ -49,7 +49,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 20px;
+  border-radius: 100%;
   height: 40px;
   width: 40px;
 }
@@ -128,17 +128,4 @@
 
 .NFPAtitle {
   font-size: 4px;
-}
-
-.addLabel {
-  height: 200px;
-}
-.addlabel-wrapper {
-  background-color: #fff;
-  width: 7vw;
-  height: 10vh;
-  border-radius: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
