--- a/src/components/Main/PrintPreview/PrintPreview.css
+++ b/src/components/Main/PrintPreview/PrintPreview.css
@@ -43,6 +43,12 @@ iframe{
     align-items: flex-end;
 }
 
+.close-button {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
 @media screen and (max-width: 1600px) and (max-height: 900px){
  
 }
