--- a/src/components/Main/Input/Input.css
+++ b/src/components/Main/Input/Input.css
@@ -18,7 +18,7 @@
 
 .secondary-bg-wrapper {
   justify-content: space-between;
-  background: #faf9f9;
+  background: #fff;
   width: 100%;
 }
 
@@ -29,7 +29,7 @@
 .input-panel {
   width: 97%;
   margin: 5px 10px;
-  background: #faf9f9;
+  background: #fff;
 }
 
 .input-field-wrapper {
@@ -37,16 +37,11 @@
   padding: 5px;
 }
 
-.single-line-input {
-  display: flex;
-  align-items: center;
-  margin: 5px 5px;
-}
-
 .choose-symbols-wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: 10px 0;
 }
 
 .chooseSymbol {
@@ -68,6 +63,10 @@
   height: 50px;
   width: 50px;
   margin: 0px 5px;
+}
+
+.NFPA-Diamond-input {
+  margin-bottom: 25px;
 }
 
 .dropdown {
@@ -94,7 +93,7 @@
   }
   
   .chooseSymbol img {
-    height: 5vh;
+    height: 8vh;
     width: 3.5vw;
   }
 }
