--- a/src/components/Main/LabelPreview/Label/Label.css
+++ b/src/components/Main/LabelPreview/Label/Label.css
@@ -1,17 +1,16 @@
 .warning-diamond {
-  height: 40%;
-  width: 90%;
+  height: 25%;
+  width: 25%;
   display: flex;
   align-items: center;
   flex-direction: column;
+  margin: 10px;
 }
 
 .diamond-wrapper {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
   height: fit-content;
   width: fit-content;
   font-size: 1vw;
