--- a/src/components/Main/LabelPreview/LabelPreview.css
+++ b/src/components/Main/LabelPreview/LabelPreview.css
@@ -1,5 +1,5 @@
 .preview-panel {
-  height: 50%;
+  height: 45%;
   background: #a9a9a9;
   margin: 10px;
   display: flex;
@@ -17,21 +17,24 @@
 .label {
   display: flex;
   height: 100%;
+  width: 100%;
 }
 
+/*
 .label-sheet {
   width: 50%;
 }
-
+*/
 .description-container {
-  border: 1px solid #303030;
-  width: 90%;
-  margin: 10px;
+  border: 0.5px solid #303030;
+  width: 65%;
+  padding: 5px;
+  margin: 5px 0 5px 10px;
 }
 
 .collection-wrapper {
   width: 97%;
-  height: 20%;
+  height: 25%;
   margin: 10px;
   background-color: #a9a9a9;
 }
@@ -58,13 +61,13 @@
   margin: 0px;
 }
 
-.save-button-wrapper {
-  display: flex;
-  justify-content: flex-end;
-}
 
 @media screen and (max-width: 1600px) and (max-height: 900px) {
   .preview-panel {
-    height: 45%;
+      height: 39%;
+  }
+
+  .collection-wrapper {
+    width: 96%;
   }
 }
