--- a/src/components/Main/PrintPreview/DragDrop/DragDrop.css
+++ b/src/components/Main/PrintPreview/DragDrop/DragDrop.css
@@ -18,8 +18,8 @@
 .label-to-print {
     display: flex;
     margin: 2px;
-    width: 200px;
-    height: 140px;
+    width: 250px;
+    height: 175px;
     border: 1px solid #303030;
     align-items: center;
     justify-content: center;
@@ -29,8 +29,8 @@
 .slot {
     display: flex;
     margin: 2px;
-    width: 200px;
-    height: 140px;
+    width: 250px;
+    height: 175px;
     border: 0.5px dashed #303030;
     align-items: center;
     justify-content: center;
@@ -52,20 +52,53 @@
 
 .delete-button {
     position: absolute;
-    top: 5px;
+    top: 7px;
     right: 5px;
 }
 
 .delete-icon img {
     height: 20px;
     width: 20px;
-}
+}*
 
 /*labels saved*/
-.label-to-print .label-wrapper .label .label-sheet .flex-center .title-blackBG{
-    font-size: 10px;
+.label-to-print .label-wrapper {
+    width: 250px;
+    height: 175px;
 }
 
+.label-to-print .label-wrapper .title-blackBG{
+    font-size: 15px;
+    margin:5px;
+}
+
+.label-to-print .label-wrapper .flex-center .description-container {
+    padding: 0 2px;
+    margin: 0 5px;
+}
+
+.label-to-print .label-wrapper .flex-center .description-container .flex .question .label-text{
+    font-size: 8px;
+    text-align: left;
+}
+
+.label-to-print .label-wrapper .flex-center .description-container .flex .answer .label-text{
+    font-size: 8px;
+    text-align: left;
+}
+
+.label-to-print .label-wrapper .flex-center .warning-diamond img {
+    height: 3vw;
+}
+
+.label-to-print .label-wrapper .symbol-wrapper {
+    margin: 8px 0;
+}
+
+.label-to-print .label-wrapper .symbol-wrapper .symbol {
+    height: 20px;
+    width: 20px;
+} 
 
 
 @media screen and (max-width: 1600px) and (max-height: 900px){
@@ -94,15 +127,30 @@
         border: transparent !important;
     }
 
+    .delete-button {
+        display: none;
+    }
+
+    .close-button {
+        display: none;
+    }
+
+    .print-button {
+        display: none;
+    }
+
     .drag-drop-panel {
         background: none;
         margin: 0;
+
     }
 
-    .slots {
-        border: transparent;
-        margin: 0px;
-        padding: 0;
+    .drag-drop-panel .text-center .single-line-input p{
+        display:none;
+    }
+
+    .labels-to-print .label-to-print{
+        display: none;
     }
 
     .slot {
@@ -116,34 +164,37 @@
         width: 103mm;
         margin: 0;
         height: 73mm;
+        border: 0.5px solid #303030;
     }
 
     .labels-to-print {
         display: none;
     }
 
-    .delete-button {
-        display: none;
+    .drag-drop-panel .text-center .title-big{
+        display:none;
     }
 
-    .close-button {
-        display: none;
+    .label-to-print .label-wrapper {
+        width: 103mm;
+        height: 73mm;
     }
 
-    .print-button {
-        display: none;
+    .slot .label-to-print .label-wrapper .title-blackBG{
+        font-size: 25px;
     }
 
-    .labels-to-print .label-to-print{
-        display: none;
-    }
-
-    .title-big {
-        display: none;
-    }
-
-    .label-text {
-        display: none;
-    }
-    
 }
+
+/*
+
+
+.drag-drop-panel .slots {
+    border: none;
+    margin: 0px;
+    padding: 0;
+}
+
+
+*/
+
