--- a/src/shared-styles.css
+++ b/src/shared-styles.css
@@ -29,7 +29,7 @@
 
 .title-big {
   padding: 10px;
-  font-size: 1.2vw;
+  font-size: 1.1vw;
   font-weight: bold;
 }
 
@@ -39,17 +39,18 @@
   padding: 10px;
   font-size: 1vw;
   font-weight: bold;
+
 }
 
 .title-label {
-  font-size: 1.2vw;
+  font-size: 0.9vw;
   font-weight: bold;
   margin: 10px;
   text-align: center;
 }
 
 .label-text {
-  font-size: 0.9vw;
+  font-size: 0.7vw;
   padding: 5px;
 }
 
@@ -57,9 +58,16 @@
   background-color: #202020;
   color: #ffffff;
   font-size: 1.2vw;
-  width: 90%;
+  width: 92.5%;
   text-align: center;
+  margin: 10px;
   padding: 5px;
+}
+
+.single-line-input p {
+  display: flex;
+  align-items: center;
+  margin: 5px;
 }
 
 .buttons-wrapper {
@@ -97,6 +105,14 @@
   box-shadow: 0 1px 3px rgba(48,48,48,0.12), 0 1px 2px rgba(48,48,48,0.24);
 }
 
+.margin10 {
+  margin: 10px;
+}
+
+.flex {
+  display: flex;
+}
+
 #modal-wrap {
     width: 100%;
     height: 100%;
@@ -113,7 +129,7 @@
     padding: 20px;
     position: fixed;
     width: 75%;
-    height: 85%;
+    height: 95%;
     left: 50%;
     top: -50%;
     transform: translate(-50%, -50%);
@@ -131,35 +147,19 @@
 }
 
 
+@media screen and (max-width: 1600px) and (max-height: 900px) {
+  .title-blackBG {
+    width: 91%;
+  }
+}
+
+
 @media print { 
   .modal-window {
     border: none;
     padding: 0;
     height: 100%;
     margin: 0;
-  }
-
-}
-
-@media screen and (max-width: 800px) {
-  .title-big {
-    font-size: 3vw;
-  }
-
-  .title-mid {
-    font-size: 2.5vw;
-  }
-
-  .title-label {
-    font-size: 2.5vw;
-  }
-
-  .label-text {
-    font-size: 2vw;
-  }
-
-  p {
-    font-size: 2.5vw;
   }
 
 }
