--- a/src/components/Main/PrintPreview/DragDrop/DragDrop.css
+++ b/src/components/Main/PrintPreview/DragDrop/DragDrop.css
@@ -61,15 +61,25 @@
     width: 20px;
 }*
 
+.title-blackBG {
+    background-color: #202020;
+    color: #ffffff;
+    font-size: 1.2vw;
+    width: 92.5%;
+    text-align: center;
+    margin: 10px;
+    padding: 5px;
+  }
+
 /*labels saved*/
 .label-to-print .label-wrapper {
-    width: 250px;
-    height: 175px;
+    width: 25vw;
+    height: 9vw;
 }
 
 .label-to-print .label-wrapper .title-blackBG{
     font-size: 15px;
-    margin:5px;
+    margin: 5px;
 }
 
 .label-to-print .label-wrapper .flex-center .description-container {
@@ -92,7 +102,7 @@
 }
 
 .label-to-print .label-wrapper .symbol-wrapper {
-    margin: 8px 0;
+    margin: 5px 0 0 0;
 }
 
 .label-to-print .label-wrapper .symbol-wrapper .symbol {
@@ -100,20 +110,19 @@
     width: 20px;
 } 
 
+.black {
+    background-color: #202020;
+    color: white
+}
 
 @media screen and (max-width: 1600px) and (max-height: 900px){
     .drag-drop-panel {
         height: 75vh;
     }
 
-    .slot {
-        width: 150px;
-        height: 105px;
-    }
-
-    .label-to-print {
-        width: 150px;
-        height: 105px;
+    .label-to-print .label-wrapper {
+        width: 25vw;
+        height: 11vw;
     }
 }
 
@@ -124,7 +133,21 @@
         margin-bottom: 0;
         margin-left: 0;
         margin-right: 0;
-        border: transparent !important;
+        border:none;
+    }
+
+    .label-to-print .label-wrapper {
+        width: 103mm;
+        height: 73mm;
+    }
+
+    
+    .labels-to-print {
+        display: none;
+    }
+
+    .drag-drop-panel .text-center .title-big{
+        display:none;
     }
 
     .delete-button {
@@ -142,15 +165,19 @@
     .drag-drop-panel {
         background: none;
         margin: 0;
-
+        border: none;
     }
 
-    .drag-drop-panel .text-center .single-line-input p{
-        display:none;
+    .drag-drop-panel .box-shadow{
+        display: none;
     }
 
     .labels-to-print .label-to-print{
         display: none;
+    }
+
+    .drag-drop-panel .text-center .single-line-input p{
+        display:none;
     }
 
     .slot {
@@ -160,6 +187,12 @@
         border: transparent;
     }
 
+    .slots {
+        padding: 0;
+        margin: 0;
+        border: none;
+    }
+
     .label-to-print {
         width: 103mm;
         margin: 0;
@@ -167,33 +200,50 @@
         border: 0.5px solid #303030;
     }
 
-    .labels-to-print {
-        display: none;
-    }
-
-    .drag-drop-panel .text-center .title-big{
-        display:none;
-    }
-
-    .label-to-print .label-wrapper {
-        width: 103mm;
-        height: 73mm;
-    }
-
     .slot .label-to-print .label-wrapper .title-blackBG{
         font-size: 25px;
+        width: 95%;
     }
 
+    .label-to-print .label-wrapper .flex-center .description-container {
+        padding: 0 2px;
+        margin: 0 5px;
+    }
+    
+    .label-to-print .label-wrapper .flex-center .description-container .flex .question .label-text{
+        font-size: 15px;
+    }
+    
+    .label-to-print .label-wrapper .flex-center .description-container .flex .answer .label-text{
+        font-size: 15px;
+    }
+
+    .label-to-print .label-wrapper .flex-center .warning-diamond img {
+        height: 80px;
+    }
+    
+    .label-to-print .label-wrapper .symbol-wrapper {
+        margin: 15px 0 0 0;
+    }
+    
+    .label-to-print .label-wrapper .symbol-wrapper .symbol {
+        height: 40px;
+        width: 40px;
+    } 
+
+    .modal-window {
+        width: 100%;
+        height: 100%;
+        border: none;
+        padding: 0;
+        margin: 0;
+        border: none;
+    }
 }
 
 /*
 
 
-.drag-drop-panel .slots {
-    border: none;
-    margin: 0px;
-    padding: 0;
-}
 
 
 */
