--- a/src/components/Main/PrintPreview/DragDrop/DragDrop.css
+++ b/src/components/Main/PrintPreview/DragDrop/DragDrop.css
@@ -20,7 +20,6 @@
     margin: 2px;
     width: 250px;
     height: 175px;
-    border: 1px solid #303030;
     align-items: center;
     justify-content: center;
     cursor: pointer;
@@ -85,21 +84,28 @@
 .label-to-print .label-wrapper .flex-center .description-container {
     padding: 0 2px;
     margin: 0 5px;
+    height: 100px;
+    width: 75%;
+    grid-template-columns: 35% 65%;
 }
 
-.label-to-print .label-wrapper .flex-center .description-container .flex .question .label-text{
-    font-size: 8px;
-    text-align: left;
+.label-to-print .label-wrapper .flex-center .description-container .word-wrap {
+    width: 100px;
 }
 
-.label-to-print .label-wrapper .flex-center .description-container .flex .answer .label-text{
-    font-size: 8px;
+.label-to-print .label-wrapper .flex-center .description-container > div {
+    font-size: 9px;
     text-align: left;
 }
 
 .label-to-print .label-wrapper .flex-center .warning-diamond img {
     height: 3vw;
 }
+
+.label-to-print .label-wrapper .flex-center .warning-diamond .diamond-wrapper {
+    font-size: 0.5vw;
+}
+
 
 .label-to-print .label-wrapper .symbol-wrapper {
     margin: 5px 0 0 0;
@@ -116,10 +122,6 @@
 }
 
 @media screen and (max-width: 1600px) and (max-height: 900px){
-    .drag-drop-panel {
-        height: 75vh;
-    }
-
     .label-to-print .label-wrapper {
         width: 25vw;
         height: 11vw;
@@ -197,7 +199,7 @@
         width: 103mm;
         margin: 0;
         height: 73mm;
-        border: 0.5px solid #303030;
+        border: 1px solid black
     }
 
     .slot .label-to-print .label-wrapper .title-blackBG{
@@ -206,24 +208,32 @@
     }
 
     .label-to-print .label-wrapper .flex-center .description-container {
-        padding: 0 2px;
-        margin: 0 5px;
+        padding: 5px;
+        margin: 5px;
+        height: 150px;
+    }
+
+    .label-to-print .label-wrapper .flex-center .description-container .word-wrap{
+        width: 170px;
     }
     
-    .label-to-print .label-wrapper .flex-center .description-container .flex .question .label-text{
+    .label-to-print .label-wrapper .flex-center .description-container > div {
         font-size: 15px;
-    }
-    
-    .label-to-print .label-wrapper .flex-center .description-container .flex .answer .label-text{
-        font-size: 15px;
+        text-align: left;
     }
 
     .label-to-print .label-wrapper .flex-center .warning-diamond img {
-        height: 80px;
+        height: 90px;
+        margin: 5px;
+        padding: 0;
     }
     
+    .label-to-print .label-wrapper .flex-center .warning-diamond .diamond-wrapper {
+        font-size: 1.2vw;
+    }
+
     .label-to-print .label-wrapper .symbol-wrapper {
-        margin: 15px 0 0 0;
+        margin: 10px 0 0 0;
     }
     
     .label-to-print .label-wrapper .symbol-wrapper .symbol {
