--- a/src/shared-styles.css
+++ b/src/shared-styles.css
@@ -39,7 +39,6 @@
   padding: 10px;
   font-size: 1vw;
   font-weight: bold;
-
 }
 
 .title-label {
@@ -96,7 +95,7 @@
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 .teal-bg {
@@ -104,7 +103,7 @@
 }
 
 .box-shadow {
-  box-shadow: 0 1px 3px rgba(48,48,48,0.12), 0 1px 2px rgba(48,48,48,0.24);
+  box-shadow: 0 1px 3px rgba(48, 48, 48, 0.12), 0 1px 2px rgba(48, 48, 48, 0.24);
 }
 
 .margin10 {
@@ -116,42 +115,40 @@
 }
 
 #modal-wrap {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(48,48,48,0.9);
-    position: fixed;
-    z-index: 8000;
-    top: 0;
-    display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(48, 48, 48, 0.9);
+  position: fixed;
+  z-index: 8000;
+  top: 0;
+  display: none;
 }
 
 .modal-window {
-/*   display: none; */
-    border: 1px solid #202020;
-    padding: 20px;
-    position: fixed;
-    width: 75%;
-    height: 95%;
-    left: 50%;
-    top: -50%;
-    transform: translate(-50%, -50%);
-    z-index: 9000;
-    background-color: #fff;
-    transition: all 0.4s ease-in-out;
+  /*   display: none; */
+  border: 1px solid #202020;
+  padding: 20px;
+  position: fixed;
+  width: 75%;
+  height: 95%;
+  left: 50%;
+  top: -200%;
+  transform: translate(-50%, -50%);
+  z-index: 9000;
+  background-color: #fff;
+  transition: all 0.4s ease-in-out;
 }
 
 #modal-wrap.visible {
-    display: block;
+  display: block;
 }
 
 #modal-wrap.visible + .modal-window {
-    top: 50%;
+  top: 50%;
 }
-
 
 @media screen and (max-width: 1600px) and (max-height: 900px) {
   .title-blackBG {
     width: 91%;
   }
 }
-
