--- a/src/components/Main/LabelPreview/Label/Label.css
+++ b/src/components/Main/LabelPreview/Label/Label.css
@@ -13,7 +13,6 @@
   grid-template-rows: repeat(4, 1fr);
   height: fit-content;
   width: fit-content;
-  font-size: 1vw;
 }
 
 .NFPA {
@@ -21,21 +20,31 @@
   grid-area: 1 / 1 / 5 / 5;
   justify-self: center;
   align-self: center;
+  font-size: 1vw;
 }
 .redIndex {
   grid-area: 1 / 2 / 3 / 4;
   justify-self: center;
   align-self: center;
+  font-size: 1vw;
 }
 .blueIndex {
   grid-area: 2 / 1 / 4 / 3;
   justify-self: center;
   align-self: center;
+  font-size: 1vw;
 }
 .whiteIndex {
   grid-area: 3 / 2 / 5 / 4;
   justify-self: center;
   align-self: center;
+}
+.normalSize {
+  font-size: 1vw;
+}
+
+.smallSize {
+  font-size: 0.7vw;
 }
 
 .yellowIndex {
@@ -59,13 +68,33 @@
   padding: 3px;
 }
 
-.grid1 { grid-area: 1 / 1 / 2 / 2; }
-.grid2 { grid-area: 2 / 1 / 3 / 2; }
-.grid3 { grid-area: 3 / 1 / 4 / 2; }
-.grid4 { grid-area: 4 / 1 / 5 / 2; }
-.grid5 { grid-area: 5 / 1 / 6 / 2; }
-.grid6 { grid-area: 1 / 2 / 2 / 3; }
-.grid7 { grid-area: 2 / 2 / 3 / 3; }
-.grid8 { grid-area: 3 / 2 / 4 / 3; }
-.grid9 { grid-area: 4 / 2 / 5 / 3; }
-.grid10 { grid-area: 5 / 2 / 6 / 3; }
+.grid1 {
+  grid-area: 1 / 1 / 2 / 2;
+}
+.grid2 {
+  grid-area: 2 / 1 / 3 / 2;
+}
+.grid3 {
+  grid-area: 3 / 1 / 4 / 2;
+}
+.grid4 {
+  grid-area: 4 / 1 / 5 / 2;
+}
+.grid5 {
+  grid-area: 5 / 1 / 6 / 2;
+}
+.grid6 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+.grid7 {
+  grid-area: 2 / 2 / 3 / 3;
+}
+.grid8 {
+  grid-area: 3 / 2 / 4 / 3;
+}
+.grid9 {
+  grid-area: 4 / 2 / 5 / 3;
+}
+.grid10 {
+  grid-area: 5 / 2 / 6 / 3;
+}
