--- a/src/components/Main/LabelPreview/Label/Label.css
+++ b/src/components/Main/LabelPreview/Label/Label.css
@@ -11,8 +11,8 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
-  height: fit-content;
-  width: fit-content;
+  height: 5vw;
+  width: 5vw;
 }
 
 .NFPA {
@@ -39,18 +39,19 @@
   justify-self: center;
   align-self: center;
 }
+
+.yellowIndex {
+  grid-area: 2 / 3 / 4 / 5;
+  justify-self: center;
+  align-self: center;
+  font-size: 1vw;
+}
 .normalSize {
   font-size: 1vw;
 }
 
 .smallSize {
   font-size: 0.7vw;
-}
-
-.yellowIndex {
-  grid-area: 2 / 3 / 4 / 5;
-  justify-self: center;
-  align-self: center;
 }
 
 .description-container {
