--- a/src/shared-styles.css
+++ b/src/shared-styles.css
@@ -18,8 +18,19 @@
   justify-content: space-between;
 }
 
+.flex {
+  display: flex;
+}
+
 .flex-grow {
   flex-grow: 1;
+}
+
+.small-letters {
+  font-size: 0.8vw;
+}
+.size100 {
+  width: 100%;
 }
 
 .flex-end {
@@ -35,6 +46,12 @@
 .title-big {
   padding: 10px;
   font-size: 1.1vw;
+  font-weight: bold;
+}
+
+.title-small {
+  padding: 10px;
+  font-size: 0.8vw;
   font-weight: bold;
 }
 
@@ -67,12 +84,6 @@
   margin: 10px;
   padding: 5px;
   -webkit-print-color-adjust: exact;
-}
-
-.single-line-input p {
-  display: flex;
-  align-items: center;
-  margin: 5px;
 }
 
 .buttons-wrapper {
@@ -110,8 +121,8 @@
   box-shadow: 0 1px 3px rgba(48, 48, 48, 0.12), 0 1px 2px rgba(48, 48, 48, 0.24);
 }
 
-.margin10 {
-  margin: 10px;
+.mr-5 {
+  margin-right: 5px;
 }
 
 .flex {
