--- a/src/components/Main/LabelPreview/LabelPreview.css
+++ b/src/components/Main/LabelPreview/LabelPreview.css
@@ -1,3 +1,4 @@
+/* ///////////////    LabelPreview.js    /////////////// */
 .preview-panel {
   height: 45%;
   background: #a9a9a9;
@@ -7,19 +8,6 @@
   align-items: center;
 }
 
-.label-wrapper {
-  background-color: #fff;
-  width: 40vh;
-  height: 28vh;
-  border-radius: 5px;
-}
-
-.label {
-  display: flex;
-  height: 100%;
-  width: 100%;
-}
-
 .collection-wrapper {
   width: 97%;
   height: 25%;
@@ -27,15 +15,110 @@
   background-color: #a9a9a9;
 }
 
-.small-label {
-  width: 30%;
-  height: 60%;
-  background-color: #fff;
-  margin: 5px;
+@media screen and (max-width: 1600px) and (max-height: 900px) {
+  .preview-panel {
+    height: 39%;
+  }
+
+  .collection-wrapper {
+    width: 96%;
+  }
 }
 
-.buttons-wrapper a {
-  text-decoration: none;
+/* ///////////////    Label.js    /////////////// */
+
+.label-wrapper {
+  background-color: #fff;
+  width: 40vh;
+  height: 28vh;
+  border-radius: 5px;
+}
+
+.warning-diamond {
+  height: 25%;
+  width: 25%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 10px;
+}
+
+.diamond-wrapper {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  height: 5vw;
+  width: 5vw;
+}
+
+.NFPA {
+  height: 5vw;
+  grid-area: 1 / 1 / 5 / 5;
+  justify-self: center;
+  align-self: center;
+  font-size: 1vw;
+}
+.redIndex {
+  grid-area: 1 / 2 / 3 / 4;
+  justify-self: center;
+  align-self: center;
+  font-size: 1vw;
+}
+.blueIndex {
+  grid-area: 2 / 1 / 4 / 3;
+  justify-self: center;
+  align-self: center;
+  font-size: 1vw;
+}
+.whiteIndex {
+  grid-area: 3 / 2 / 5 / 4;
+  justify-self: center;
+  align-self: center;
+}
+
+.yellowIndex {
+  grid-area: 2 / 3 / 4 / 5;
+  justify-self: center;
+  align-self: center;
+  font-size: 1vw;
+}
+.normalSize {
+  font-size: 1vw;
+}
+
+.smallSize {
+  font-size: 0.7vw;
+}
+
+.grid1 {
+  grid-area: 1 / 1 / 2 / 2;
+}
+.grid2 {
+  grid-area: 2 / 1 / 3 / 2;
+}
+.grid3 {
+  grid-area: 3 / 1 / 4 / 2;
+}
+.grid4 {
+  grid-area: 4 / 1 / 5 / 2;
+}
+.grid5 {
+  grid-area: 5 / 1 / 6 / 2;
+}
+.grid6 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+.grid7 {
+  grid-area: 2 / 2 / 3 / 3;
+}
+.grid8 {
+  grid-area: 3 / 2 / 4 / 3;
+}
+.grid9 {
+  grid-area: 4 / 2 / 5 / 3;
+}
+.grid10 {
+  grid-area: 5 / 2 / 6 / 3;
 }
 
 .symbol-wrapper {
@@ -50,13 +133,159 @@
   margin: 0px;
 }
 
+/* ///////////////    AddLabel.js    /////////////// */
 
-@media screen and (max-width: 1600px) and (max-height: 900px) {
-  .preview-panel {
-      height: 39%;
-  }
+.addlabel-wrapper {
+  background-color: #fff;
+  width: 7vw;
+  height: 10vh;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .collection-wrapper {
-    width: 96%;
-  }
+.addLabel {
+  height: 60%;
+}
+
+.addLabel:hover {
+  transition: 0.1s;
+  height: 65%;
+}
+.addLabel:active {
+  transform: translateY(4px);
+}
+
+/* ///////////////    MiniLabel.js    /////////////// */
+
+.minilabel-wrapper {
+  width: 8vw;
+  height: 11vh;
+  border-radius: 5px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.selectedminilabel-wrapper {
+  background-color: black;
+  width: 8vw;
+  height: 11vh;
+  border-radius: 5px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.minilabelOverlay {
+  opacity: 0;
+  height: 92%;
+  width: 92%;
+  position: absolute;
+  z-index: 10;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.minilabelOverlay:hover {
+  transition: 0.2s;
+  opacity: 1;
+  background-color: rgba(36, 36, 36, 0.9);
+}
+
+.iconWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  height: 40px;
+  width: 40px;
+}
+
+.iconWrapper:active {
+  background-color: #b6b6b6;
+  box-shadow: 0 5px #666;
+  transform: translateY(1px);
+}
+
+.editMe {
+  opacity: inherit;
+  height: 32px;
+}
+
+.deleteMe {
+  opacity: inherit;
+  height: 32px;
+}
+
+.minilabel {
+  display: flex;
+  height: 92%;
+  width: 92%;
+  background-color: white;
+  margin: 3px;
+  border-radius: 5px;
+  position: absolute;
+}
+
+.minipadding {
+  padding: 5px;
+}
+
+.minilabel-text {
+  font-size: 0.3vw;
+  padding: 1px;
+}
+
+.minititle-blackBG {
+  background-color: #202020;
+  color: #ffffff;
+  font-size: 10%;
+  width: 2vw;
+  max-height: 2vh;
+  text-align: center;
+  padding: 2px;
+}
+
+.minilabel-sheet {
+  width: 60%;
+}
+
+.minidescription-container {
+  border: 1px solid black;
+  width: 90%;
+  margin: 1px;
+}
+.title-minilabel {
+  font-size: 0.2vw;
+  font-weight: bold;
+  margin: 10px;
+  text-align: center;
+}
+
+.minisymbol-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.minisymbol {
+  height: 12px;
+  width: 12px;
+  margin: 0px;
+}
+.minisymbol img {
+  width: 100%;
+  height: 100%;
+}
+
+.miniNFPA {
+  height: 15px;
+}
+
+.NFPAtitle {
+  font-size: 4px;
 }
