CSS for 16:9 big

--- a/src/components/Main/PrintPreview/PrintPreview.css
+++ b/src/components/Main/PrintPreview/PrintPreview.css
@@ -44,5 +44,8 @@
 }
   
 @media screen and (max-width: 1600px) and (max-height: 900px){
- 
+    .modal-window {
+        padding: 1%;
+        height: 93%;
+    }
 }
