--- a/src/components/Main/Input/Input.css
+++ b/src/components/Main/Input/Input.css
@@ -4,11 +4,12 @@
 
 .input-panel-wrapper {
   display: block;
-  margin: 0 15px;
+  margin: 2%;
 }
 
 .input-field-wrapper {
   display: block;
+  margin-bottom: 4%;
 }
 
 /* ///////////////    SymbolsInput.js    /////////////// */
@@ -17,22 +18,16 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  border: 1px solid black;
-  padding: 3%;
-  margin: 0 15px;
-  margin-top: 20px;
+  border: 1px solid #d3d3d3;
+  border-radius: 4px;
+  padding: 2%;
+  margin: 2% 2% 0% 2%;
 }
 
 .chooseSymbol {
-  height: 3.5vw;
-  min-height: 50px;
-}
-
-@media screen and (max-width: 1600px) and (max-height: 900px) {
-  .chooseSymbol img {
-    height: 8vh;
-    width: 3.5vw;
-  }
+  height: 6.5vh;
+  min-height: 5vh;
+  margin: 0.5%;
 }
 
 .previewSymbols {
@@ -44,26 +39,48 @@
 .color-diamond-wrapper {
   display: flex;
   width: 50%;
-  height: 9vh;
+  height: 6vh;
   align-items: center;
 }
 
 .color-diamond-wrapper img {
-  height: 35px;
-  width: 35px;
-  margin: 0px;
+  height: 40px;
+  width: 40px;
+  margin: 1%;
 }
 
 .NFPA-Diamond-input {
-  margin: 0 15px;
+  margin: 2% ;
 }
 
 @media screen and (max-width: 1600px) and (max-height: 900px) {
   .color-diamond-wrapper {
-    margin: 2px;
+    height: 5vh;
   }
 
-  .dropdown {
-    width: 16vw;
+  .choose-symbols-wrapper {
+    padding: 2%;
+    margin: 0 2%;
+    margin-top: 1%;
   }
+  
+  .chooseSymbol {
+    height: 6vh;
+    min-height: 4vh;
+    margin: 0.5%;
+  }
+
+  .input-panel-wrapper {
+    margin: 1% 2%;
+  }
+
+  .NFPA-Diamond-input {
+    margin: 0 2%;
+  }
+
+  .input-field-wrapper {
+    display: block;
+    margin-bottom: 2%;
+  }
+
 }
