--- a/src/components/Main/LabelPreview/LabelPreview.css
+++ b/src/components/Main/LabelPreview/LabelPreview.css
@@ -15,16 +15,6 @@
   background-color: #a9a9a9;
 }
 
-@media screen and (max-width: 1600px) and (max-height: 900px) {
-  .preview-panel {
-    height: 39%;
-  }
-
-  .collection-wrapper {
-    width: 96%;
-  }
-}
-
 /* ///////////////    Label.js    /////////////// */
 
 .label-wrapper {
@@ -34,25 +24,44 @@
   border-radius: 5px;
 }
 
+.description-container {
+  display: grid;
+  grid-template-columns: 32% 68%;
+  grid-template-rows: 15% 15% 40% 15% 15%;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  border: 0.5px solid #303030;
+  width: 70%;
+  height: 140px;
+  padding: 3px;
+  margin: 0 1% 0 1%;
+  font-size: 0.7vw;
+}
+
+.word-wrap {
+  word-wrap: break-word;
+  width: 95%;
+}
+
 .warning-diamond {
-  height: 25%;
-  width: 25%;
+  height: 20%;
+  width: 20%;
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin: 10px;
+  margin: 1%;
 }
 
 .diamond-wrapper {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
-  height: 5vw;
-  width: 5vw;
+  height: 4vw;
+  width: 4vw;
 }
 
 .NFPA {
-  height: 5vw;
+  height: 4vw;
   grid-area: 1 / 1 / 5 / 5;
   justify-self: center;
   align-self: center;
@@ -288,4 +297,43 @@
 
 .NFPAtitle {
   font-size: 4px;
+}
+
+
+
+@media screen and (max-width: 1600px) and (max-height: 900px) {
+  .preview-panel {
+    height: 39%;
+  }
+
+  .collection-wrapper {
+    width: 96%;
+  }
+
+  .warning-diamond {
+    height: 20%;
+    width: 20%;
+    margin: 2%;
+  }
+
+  .diamond-wrapper{
+    height: 4vw;
+    width: 4vw;
+  }
+
+  .NFPA {
+    height: 4vw
+  }
+
+  .description-container {
+    width: 67%;
+    height: 12vh;
+    margin: 0 1% 0 0;
+    padding: 1%;
+  }
+  
+  .symbol {
+    height: 2vw;
+    width: 2vw;
+  }
 }
