--- a/src/components/Main/PrintPreview/DragDrop/DragDrop.css
+++ b/src/components/Main/PrintPreview/DragDrop/DragDrop.css
@@ -18,7 +18,7 @@
     width: 90%;
     height: 82%;
     padding: 10px;
-    margin: 10px 10px;
+    margin: 10px;
 }
 
 .label-to-print {
@@ -57,7 +57,7 @@
 
 .delete-button {
     position: absolute;
-    top: 7px;
+    top: 5px;
     right: 5px;
 }
 
@@ -74,24 +74,30 @@
 
 .label-to-print .label-wrapper .title-blackBG{
     font-size: 0.8rem;
-    margin: 2%;
+    margin: 2% 2% 0 2%;
 }
 
 .label-to-print .label-wrapper .flex-center .description-container {
-    padding: 0 2px;
-    margin: 0 5px;
-    height: auto;
-    width: 55%;
-    grid-template-columns: 35% 65%;
+    padding: 0 2%;
+    margin: 2%;
+    height: 10vh;
+    width: 65%;
+    grid-template-columns: 30% 70%;
 }
 
 .label-to-print .label-wrapper .flex-center .description-container .word-wrap {
-    width: 100px;
+    width: 98%;
 }
 
 .label-to-print .label-wrapper .flex-center .description-container > div {
-    font-size: 9px;
+    font-size: 0.5rem;
     text-align: left;
+}
+
+.label-to-print .label-wrapper .flex-center .warning-diamond {
+    height: 18%;
+    width: 18%;
+    margin: 3%;
 }
 
 .label-to-print .label-wrapper .flex-center .warning-diamond img {
@@ -99,12 +105,16 @@
 }
 
 .label-to-print .label-wrapper .flex-center .warning-diamond .diamond-wrapper {
-    font-size: 0.3vw;
+    height: 2vw;
+    width: 2vw;
 }
 
+.label-to-print .label-wrapper .flex-center .warning-diamond .diamond-wrapper > div{
+    font-size: 0.6rem;
+}
 
 .label-to-print .label-wrapper .symbol-wrapper {
-    margin: 5px 0 0 0;
+    margin: 0;
 }
 
 .label-to-print .label-wrapper .symbol-wrapper .symbol {
@@ -129,8 +139,9 @@
     }
 
     .label-to-print .label-wrapper {
-        width: 103mm;
-        height: 73mm;
+        width: 100mm;
+        height: 70mm;
+        border: 0.5px solid #202020
     }
 
     
@@ -157,11 +168,7 @@
     .drag-drop-panel {
         background: none;
         margin: 0;
-        border: none;
-    }
-
-    .drag-drop-panel .box-shadow{
-        display: none;
+        border: transparent;
     }
 
     .drag-drop-panel .text-center .single-line-input p{
@@ -177,7 +184,6 @@
         width: 103mm;
         margin: 0;
         height: 73mm;
-        border: 1px solid black
     }
 
     /*Print Grid (Drop)*/
@@ -195,23 +201,28 @@
     }
 
     /*Layout of label on the print grid (dropped)*/
+    .drag-drop-container .box-shadow {
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0), 0 1px 2px rgba(0, 0, 0, 0);
+    }
+
     .slot .label-to-print .label-wrapper .title-blackBG{
-        font-size: 25px;
-        width: 95%;
+        font-size: 23px;
+        width: 93%;
     }
 
     .label-to-print .label-wrapper .flex-center .description-container {
-        padding: 5px;
-        margin: 5px;
-        height: 150px;
+        padding: 1%;
+        margin: 2% 2% 0 2%;
+        height: 140px;
+        grid-template-columns: 30% 70%;
     }
 
     .label-to-print .label-wrapper .flex-center .description-container .word-wrap{
-        width: 170px;
+        width: 95%;
     }
     
     .label-to-print .label-wrapper .flex-center .description-container > div {
-        font-size: 15px;
+        font-size: 13px;
         text-align: left;
     }
 
@@ -222,26 +233,82 @@
     }
     
     .label-to-print .label-wrapper .flex-center .warning-diamond .diamond-wrapper {
-        font-size: 1.2vw;
+        font-size: 1vw;
+    }
+
+    .label-to-print .label-wrapper .flex-center .warning-diamond .diamond-wrapper > div{
+        font-size: 1rem;
+    }
+
+    .label-to-print .label-wrapper .flex-center .warning-diamond .diamond-wrapper {
+        height: 8.5vw;
+        width: 8.5vw;
     }
 
     .label-to-print .label-wrapper .symbol-wrapper {
-        margin: 10px 0 0 0;
+        margin: 2%;
     }
     
     .label-to-print .label-wrapper .symbol-wrapper .symbol {
-        height: 40px;
-        width: 40px;
+        height: 38px;
+        width: 38px;
     } 
 
     /*Hide modal window in print*/
     .modal-window {
         width: 100%;
         height: 100%;
-        border: none;
         padding: 0;
         margin: 0;
-        border: none;
     }
 }
 
+@media screen and (max-width: 1600px) and (max-height: 900px) {
+    .label-to-print .label-wrapper .flex-center .description-container .word-wrap{
+        width: 97%;
+    }
+
+    .drag-drop-panel {
+        height: 85%;
+    }
+
+    .label-to-print .label-wrapper .flex-center .description-container {
+        padding: 0 1%;
+        margin: 1%;
+        height: 9.5vh;
+        width: 70%;
+        grid-template-columns: 38% 62%;
+    }
+
+    .label-to-print .label-wrapper .flex-center .description-container > div {
+        font-size: 6px;
+        text-align: left;
+    }
+
+    .label-to-print .label-wrapper .flex-center .warning-diamond {
+        margin:1%;
+    }
+
+    .label-to-print .label-wrapper .flex-center .warning-diamond img {
+        height: 2vw;
+    }
+    
+    .label-to-print .label-wrapper .flex-center .warning-diamond .diamond-wrapper {
+        height: 2vw;
+        width: 2vw;
+    }
+
+    .label-to-print .label-wrapper .flex-center .warning-diamond .diamond-wrapper > div{
+        font-size: 0.5rem;
+    }
+
+    .label-to-print .label-wrapper .symbol-wrapper {
+        margin: 1%;
+    }
+    
+    .label-to-print .label-wrapper .symbol-wrapper .symbol {
+        height: 1.2vw;
+        width: 1.2vw;
+    } 
+
+}
