--- a/src/components/Main/LabelPreview/LabelPreview.css
+++ b/src/components/Main/LabelPreview/LabelPreview.css
@@ -269,6 +269,7 @@
 .minilabel-sheet {
   width: 60%;
 }
+
 .miniContainer {
   display: flex;
   width: 100%;
@@ -331,7 +332,7 @@
   }
 
   .collection-wrapper {
-    width: 96%;
+    width: 93%;
   }
 
   .NFPA {
@@ -349,7 +350,14 @@
     height: 2vw;
     width: 2vw;
   }
+
+  .minidescription-container {
+    grid-template-columns: 40% 60%;
+  }
+
 }
+
+
 .minigrid1 {
   grid-area: 1 / 1 / 2 / 2;
 }
